--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,9 +2,10 @@
     padding: 18px 30px 18px 30px;
     border-radius: 30px;
     border: none;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     margin-bottom: 60px;
-    background-color: #FF79DA ;
+    background: linear-gradient(to left top, #9356DC , #FF79DA);;
     color: white;
+
 }
