--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -34,3 +34,48 @@ body{
         padding: 5px 10px 30px 10px;
     }
 }
+.menu_fonctionnement{
+  h2{
+    margin: 45px 0px 25px 18px;
+  }
+  .menu_etape{
+    margin: 20px 22px 25px 25px;
+  }
+  p{
+    margin: 29px -13px 0px 0px;
+    background-color: #9356DC;
+    padding: 4px 8px 4px 8px;
+    border-radius: 50px;
+    color: white;
+    font-size: 13px;
+    float: left;
+  }
+  i{
+    color: #7e7e7e; 
+    padding: 2px 25px 0px 0px;
+  }
+  h3{
+    font-weight: 500;
+    font-size: 18px;
+    margin: 0px;
+  }
+  .menu{
+    display: flex;
+    flex-direction: row;
+    background-color: #f6f6f6;
+    border-radius: 20px;
+    margin-top: 10px;
+    padding: 30px 0px 30px 40px;
+  }
+  .menu_3{
+    display: flex;
+    flex-direction: row;
+    background-color: #f5edff;
+    border-radius: 20px;
+    margin-top: 10px;
+    padding: 30px 0px 30px 40px;
+    i{
+      color: #9356dc;
+    }
+  }
+}
