Mise en page sass index.htm terminé

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,5 +7,5 @@
     margin-bottom: 60px;
     background: linear-gradient(to left top, #9356DC , #FF79DA);;
     color: white;
-
+    box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
 }
