--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 body {
   font-family: "Roboto";
+}
+
+h4 {
+  font-family: "Shrikhand";
 }
 
 .btn_description {
@@ -12,6 +17,7 @@ body {
   margin-bottom: 60px;
   background: linear-gradient(to left top, #9356DC, #FF79DA);
   color: white;
+  box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
 }
 
 body {
@@ -54,19 +60,26 @@ body {
 }
 
 .menu_fonctionnement h2 {
-  margin: 45px 0px 25px 18px;
+  margin: 45px 0px 25px 20px;
 }
 .menu_fonctionnement .menu_etape {
   margin: 20px 22px 25px 25px;
+  position: relative;
 }
-.menu_fonctionnement p {
-  margin: 29px -13px 0px 0px;
+.menu_fonctionnement .menu_etape::before {
+  content: attr(data-order);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: calc(50% - 12px);
+  left: -11px;
   background-color: #9356DC;
-  padding: 4px 8px 4px 8px;
   border-radius: 50px;
   color: white;
   font-size: 13px;
-  float: left;
+  width: 25px;
+  height: 25px;
 }
 .menu_fonctionnement i {
   color: #7e7e7e;
@@ -84,6 +97,7 @@ body {
   border-radius: 20px;
   margin-top: 10px;
   padding: 30px 0px 30px 40px;
+  box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
 }
 .menu_fonctionnement .menu_3 {
   display: flex;
@@ -92,9 +106,93 @@ body {
   border-radius: 20px;
   margin-top: 10px;
   padding: 30px 0px 30px 40px;
+  box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
 }
 .menu_fonctionnement .menu_3 i {
   color: #9356dc;
+}
+
+.restaurants_menu {
+  background-color: #f6f6f6;
+  margin: 70px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+}
+.restaurants_menu h2 {
+  margin: 0px 0px 0px 20px;
+  padding: 60px 0px 30px 0px;
+}
+.restaurants_menu .restaurants_carte {
+  background-color: white;
+  margin: 0px 20px 20px 20px;
+  border-radius: 20px;
+  box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
+}
+.restaurants_menu .restaurants_carte img {
+  width: 100%;
+  height: 190px;
+  object-fit: cover;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+}
+.restaurants_menu .restaurants_carte .titre_coeur {
+  display: flex;
+  flex-direction: row;
+  gap: 140px;
+  justify-content: space-between;
+}
+.restaurants_menu .restaurants_carte h3 {
+  margin: 10px 0px 0px 15px;
+  font-size: 20px;
+}
+.restaurants_menu .restaurants_carte p {
+  margin: 0px 0px 15px 15px;
+  font-size: 18px;
+}
+.restaurants_menu .restaurants_carte i {
+  margin: 30px 20px 0px 0px;
+}
+
+footer {
+  background-color: #353535;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 0px 40px 20px;
+}
+footer h4 {
+  color: white;
+  font-size: 18px;
+  font-weight: 300;
+}
+footer .footer_logo_1 {
+  display: flex;
+  flex-direction: row;
+}
+footer .footer_logo_1 p {
+  margin: 0px;
+  padding: 0px 0px 0px 15px;
+}
+footer .footer_logo_1 i {
+  padding-top: 5px;
+}
+footer .footer_logo_2 {
+  display: flex;
+  flex-direction: row;
+}
+footer .footer_logo_2 p {
+  margin: 0px;
+  padding: 10px 0px 0px 10px;
+  font-size: 17px;
+}
+footer .footer_logo_2 i {
+  padding-top: 15px;
+}
+footer i {
+  color: white;
+}
+footer p {
+  color: white;
+  margin: 10px 0px 0px 0px;
 }
 
 header {
