--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ h4 {
   font-family: "Shrikhand";
 }
 
+.titre_menu_coeur h1 {
+  font-family: "Shrikhand";
+}
+
 .btn_description {
   padding: 18px 30px 18px 30px;
   border-radius: 30px;
@@ -22,6 +26,64 @@ h4 {
 
 body {
   margin: 0px;
+}
+
+footer {
+  background-color: #353535;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 0px 40px 20px;
+}
+footer h4 {
+  color: white;
+  font-size: 18px;
+  font-weight: 300;
+}
+footer .footer_logo_1 {
+  display: flex;
+  flex-direction: row;
+}
+footer .footer_logo_1 p {
+  margin: 0px;
+  padding: 0px 0px 0px 15px;
+}
+footer .footer_logo_1 i {
+  padding-top: 5px;
+}
+footer .footer_logo_2 {
+  display: flex;
+  flex-direction: row;
+}
+footer .footer_logo_2 p {
+  margin: 0px;
+  padding: 10px 0px 0px 10px;
+  font-size: 17px;
+}
+footer .footer_logo_2 i {
+  padding-top: 15px;
+}
+footer i {
+  color: white;
+}
+footer p {
+  color: white;
+  margin: 10px 0px 0px 0px;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 35px;
+  margin-bottom: 30px;
+}
+header img {
+  width: 190px;
+  position: absolute;
+}
+header i {
+  padding-right: 340px;
 }
 
 .localisation {
@@ -153,58 +215,68 @@ body {
   margin: 30px 20px 0px 0px;
 }
 
-footer {
-  background-color: #353535;
-  display: flex;
-  flex-direction: column;
-  padding: 0px 0px 40px 20px;
-}
-footer h4 {
-  color: white;
-  font-size: 18px;
-  font-weight: 300;
-}
-footer .footer_logo_1 {
-  display: flex;
-  flex-direction: row;
-}
-footer .footer_logo_1 p {
-  margin: 0px;
-  padding: 0px 0px 0px 15px;
-}
-footer .footer_logo_1 i {
-  padding-top: 5px;
-}
-footer .footer_logo_2 {
-  display: flex;
-  flex-direction: row;
-}
-footer .footer_logo_2 p {
-  margin: 0px;
-  padding: 10px 0px 0px 10px;
-  font-size: 17px;
-}
-footer .footer_logo_2 i {
-  padding-top: 15px;
-}
-footer i {
-  color: white;
-}
-footer p {
-  color: white;
-  margin: 10px 0px 0px 0px;
+.photo_restaurant img {
+  width: 100%;
+  position: absolute;
 }
 
-header {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  margin-top: 23px;
-  margin-bottom: 15px;
+.background {
+  background-color: #f6f6f6;
+  position: relative;
+  margin-top: 250px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
-header img {
-  width: 190px;
+
+.menu_complet {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.menu_complet h1 {
+  padding-top: 10px;
+  font-size: 30px;
+  font-weight: 400;
+}
+.menu_complet .titre_menu_coeur {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.menu_complet i {
+  padding: 50px 30px 0px 0px;
+}
+
+.menu_entrees h2 {
+  font-size: 18px;
+  font-weight: 400;
+  margin: 0px;
+}
+.menu_entrees .entree {
+  background-color: white;
+  margin-bottom: 12px;
+  border-radius: 15px;
+  box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
+  cursor: pointer;
+}
+.menu_entrees .entree p {
+  display: flex;
+  flex-direction: row;
+}
+.menu_entrees .description_prix {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.menu_entrees h3 {
+  margin: 20px 0px 0px 0px;
+  padding: 10px 0px 0px 10px;
+}
+.menu_entrees p {
+  margin: 0px 0px 0px 0px;
+  padding: 5px 25px 10px 10px;
+}
+.menu_entrees .prix_gras {
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=style.css.map */
