--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,10 +3,14 @@ header{
     width: 100%;
     align-items: center;
     justify-content: center;
-    margin-top: 23px;
-    margin-bottom: 15px;
+    margin-top: 35px;
+    margin-bottom: 30px;
     
     img{
         width: 190px;
+        position: absolute;
+    }
+    i{
+        padding-right: 340px;
     }
 }
