--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -71,6 +71,7 @@
     margin-top: 10px;
     padding: 30px 0px 30px 40px;
     box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
+    cursor: pointer;
   }
   .menu_3{
     display: flex;
@@ -80,6 +81,7 @@
     margin-top: 10px;
     padding: 30px 0px 30px 40px;
     box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
+    cursor: pointer;
     i{
       color: #9356dc;
     }
@@ -94,11 +96,16 @@
       margin: 0px 0px 0px 20px;
       padding: 60px 0px 30px 0px;
     }
+    a{
+      text-decoration: none;
+      color: black;
+    }
     .restaurants_carte{
       background-color: white;
       margin: 0px 20px 20px 20px;
       border-radius: 20px;
       box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
+      cursor: pointer;
     img{
       width: 100%;
       height: 190px;
@@ -119,6 +126,7 @@
     p{
       margin: 0px 0px 15px 15px;
       font-size: 18px;
+      padding-bottom: 10px;
     }
     i{
       margin: 30px 20px 0px 0px;
