--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,19 +9,46 @@
       font-size: 17px;
       font-weight: 500;
       padding-left: 19px;
+      @media (min-width: 791px) {
+      font-size: 22px;
+      }
     }
     i{
-      padding-top: 3px;
+      padding-top: 5px;
+
     }
   }
+  .responsive{
+    @media (min-width: 517px) and (max-width: 790px){
+display: flex;
+    }
+    @media (min-width: 791px) {
+      display: flex;
+      flex-direction: row;
+    }
+      
+    }
   .description_ohmyfood{
     background-color: #f6f6f6;
     text-align: center;
+    @media (min-width: 517px) and (max-width: 790px){
+     width: 50%; 
+    }
+    @media (min-width: 791px) {
+      width: 60%;
+    }
     h1{
         margin: 0px;
         font-size: 28px;
         font-weight: 700;
         padding: 45px 40px 10px 40px;
+        @media (min-width: 517px) and (max-width: 790px){
+      padding: 75px 0px 0px 0px;
+      white-space: wrap;
+        }
+        @media (min-width: 791px) {
+      padding-top: 90px;
+        }
     }
     p{
         margin: 0px;
@@ -29,9 +56,22 @@
         padding-left: 10px;
         padding-right: 10px;
         padding: 5px 10px 30px 10px;
+        @media (min-width: 517px) and (max-width: 790px){
+      padding: 50px 0px 55px 0px;
+        }
+        @media (min-width: 791px) {
+      padding-top: 50px;
+      padding-bottom: 50px;
+        }
     }
 }
 .menu_fonctionnement{
+  @media (min-width: 517px) and (max-width: 790px){
+      width: 50%;
+  }
+  @media (min-width: 791px) {
+      width: 40%;
+  }
   h2{
     margin: 45px 0px 25px 20px;
   }
@@ -57,11 +97,17 @@
   i{
     color: #7e7e7e; 
     padding: 2px 25px 0px 0px;
+    @media (min-width: 791px) {
+      padding-left: 25px;
+    }
   }
   h3{
     font-weight: 500;
     font-size: 18px;
     margin: 0px;
+    @media (min-width: 791px) {
+     padding-left: 25px; 
+    }
   }
   .menu{
     display: flex;
@@ -92,6 +138,35 @@
     margin: 70px 0px 0px 0px;
     display: flex;
     flex-direction: column;
+    .responsive_ordi{
+      @media (min-width: 791px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+      }
+    }
+    .restaurant_rangé1{
+    @media (min-width: 517px) and (max-width: 790px){
+display: flex;
+flex-direction: row;
+    }
+
+  }
+.restaurant_rangé2{
+  @media (min-width: 517px) and (max-width: 790px){
+    display: flex;
+    flex-direction: row;
+
+    .alafrancaise_carte{
+      width: 50%;
+    }
+    .ledelicedessens_carte{
+      width: 50%;
+    }
+}
+}
+
     h2{
       margin: 0px 0px 0px 20px;
       padding: 60px 0px 30px 0px;
@@ -106,6 +181,9 @@
       border-radius: 20px;
       box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
       cursor: pointer;
+      @media (min-width: 791px) {
+        width: 700px;
+      }
     img{
       width: 100%;
       height: 190px;
@@ -131,5 +209,5 @@
     i{
       margin: 30px 20px 0px 0px;
     }
-  }
+    }
   }
