--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,17 +3,24 @@ footer{
     display: flex;
     flex-direction: column;
     padding: 0px 0px 40px 20px;
+
 h4{
     color: white;
     font-size: 18px;
     font-weight: 300;
+    @media (min-width: 791px) {
+
+        font-size: 30px;
+    }
 }
+
 .footer_logo_1{
     display: flex;
     flex-direction: row;
     p{
         margin: 0px;
         padding: 0px 0px 0px 15px;
+
     }
     i{
         padding-top: 5px;
@@ -38,5 +45,10 @@ p{
     color: white;
     margin: 10px 0px 0px 0px;
     cursor: pointer;
+}
+.footer_partie2{
+    @media (min-width: 791px) {
+        padding-left: 25px;
+}
 }
 }
