--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,14 @@ h4 {
   box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
   cursor: pointer;
 }
+@media (min-width: 517px) and (max-width: 790px) {
+  .btn_restaurants_page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0px;
+  }
+}
 
 body {
   margin: 0px;
