--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 body {
@@ -294,20 +293,20 @@ header i {
   }
 }
 @media (min-width: 517px) and (max-width: 790px) {
-  .restaurants_menu .restaurant_rangé1 {
+  .restaurants_menu .restaurant_range1 {
     display: flex;
     flex-direction: row;
   }
 }
 @media (min-width: 517px) and (max-width: 790px) {
-  .restaurants_menu .restaurant_rangé2 {
+  .restaurants_menu .restaurant_range2 {
     display: flex;
     flex-direction: row;
   }
-  .restaurants_menu .restaurant_rangé2 .alafrancaise_carte {
+  .restaurants_menu .restaurant_range2 .alafrancaise_carte {
     width: 50%;
   }
-  .restaurants_menu .restaurant_rangé2 .ledelicedessens_carte {
+  .restaurants_menu .restaurant_range2 .ledelicedessens_carte {
     width: 50%;
   }
 }
@@ -329,6 +328,11 @@ header i {
 @media (min-width: 791px) {
   .restaurants_menu .restaurants_carte {
     width: 450px;
+  }
+}
+@media (min-width: 517px) and (max-width: 890px) {
+  .restaurants_menu .restaurants_carte {
+    width: 90%;
   }
 }
 .restaurants_menu .restaurants_carte img {
