--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -119,19 +119,7 @@ display: flex;
     box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
     cursor: pointer;
   }
-  .menu_3{
-    display: flex;
-    flex-direction: row;
-    background-color: #f5edff;
-    border-radius: 20px;
-    margin-top: 10px;
-    padding: 30px 0px 30px 40px;
-    box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
-    cursor: pointer;
-    i{
-      color: #9356dc;
-    }
-  }
+
 }
 .restaurants_menu{
     background-color: #f6f6f6;
@@ -181,6 +169,22 @@ flex-direction: row;
       border-radius: 20px;
       box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
       cursor: pointer;
+    
+        
+        &:hover i{
+          animation: fill 0.3s ease-in-out;
+          display: inline-block;
+          opacity: 1;
+          background:linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+          background:-webkit-linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color:transparent;
+          font-weight: bold;
+    
+          
+        
+      }
+
       @media (min-width: 791px) {
         width: 450px;
       }
@@ -199,6 +203,7 @@ flex-direction: row;
       flex-direction: row;
       gap: 140px;
       justify-content: space-between;
+
     }
     h3{
       margin: 10px 0px 0px 15px;
@@ -211,6 +216,31 @@ flex-direction: row;
     }
     i{
       margin: 30px 20px 0px 0px;
+padding: 4px;
     }
+    }
+  }
+  @keyframes fill{
+    0%{ 
+      opacity: 1;
+    }
+    50%{
+      opacity: 2;
+    }
+    60%{
+      transform: scale(0);
+    }
+    70%{
+      transform: scale(1);
+    }
+    80%{
+      transform: scale(1.1);
+    }
+    90%{
+      transform: scale(1.2);
+    }
+    100%{
+      opacity: 1;
+      transform: scale(1);
     }
   }
